css fixes for event alignment

--- a/themes/experience-engine-v2/assets/styles/components/single/single-content.css
+++ b/themes/experience-engine-v2/assets/styles/components/single/single-content.css
@@ -188,3 +188,9 @@
 .file .element-invisible {
 	visibility: hidden;
 }
+
+.article-inner-container{
+	& .content-wrap{
+		padding: 0 1.3rem 1rem;
+	}
+}
